--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -156,6 +156,7 @@ mxe:
   #  - apt-get -y install wget curl qttools5-dev git
   script: 
     - chmod +x ci-scripts/mxe.sh
+    - sleep 10h
     - ci-scripts/mxe.sh
   after_script:
     - wget $icon_server/checkmark/$CI_COMMIT_REF_NAME/$CI_COMMIT_SHA/$CI_JOB_NAME/$CI_JOB_STATUS/${CI_JOB_URL#*/*/*/}
