--- a/ci-scripts/dockerfiles/nitrokey-app-mxe-agent/Dockerfile
+++ b/ci-scripts/dockerfiles/nitrokey-app-mxe-agent/Dockerfile
@@ -6,5 +6,7 @@ RUN apt-get update && \
 	apt-get install ${AF} gnupg2 && \
 	echo "deb http://pkg.mxe.cc/repos/apt bionic main" > /etc/apt/sources.list.d/mxeapt.list && \
 	apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys C6BF758A33A3A276 && \
+	add-apt-repository ppa:beineri/opt-qt-5.15.2-bionic && \
 	apt-get update && \
+	apt-get install qt515base && \
 	apt-get install ${AF} mxe-i686-w64-mingw32.static-qtbase mxe-i686-w64-mingw32.static-qtsvg mxe-i686-w64-mingw32.static-libusb1 make wget curl qttools5-dev git upx-ucl nsis
