Fix logical negation operator
CMake expresses logical negation as `NOT` and not as `!`.
See: https://cmake.org/cmake/help/latest/command/if.html#condition-syntax

The present syntax causes the system libnitrokey to be always ignored,
and the bundled libnitrokey to be always used. This defeats the purpose
of the check for a system-provided libnitrokey.

Signed-off-by: Nicolas Benes <nbenes.gh@xandea.de>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -230,7 +230,7 @@ if(LIBNITROKEY_FORCE_BUNDLED)
     MESSAGE(WARNING "Using bundled libnitrokey forced")
 endif()
 
-if(LIBNITROKEY_FOUND AND !LIBNITROKEY_FORCE_BUNDLED)
+if(LIBNITROKEY_FOUND AND NOT LIBNITROKEY_FORCE_BUNDLED)
   MESSAGE(STATUS "Found system libnitrokey (Cflags: '${LIBNITROKEY_CFLAGS}' Libs: '${LIBNITROKEY_LDFLAGS}')")
   if (BUILD_SHARED_LIBS)
     target_compile_options(nitrokey-app PRIVATE ${LIBNITROKEY_CFLAGS})
