--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,4 @@
-CMAKE_MINIMUM_REQUIRED(VERSION 3.1.0 FATAL_ERROR)
-cmake_policy(SET CMP0043 OLD) # cmake --help-policy CMP0043
+CMAKE_MINIMUM_REQUIRED(VERSION 3.5...4.0)
 
 PROJECT(NitrokeyApp LANGUAGES CXX)
 SET(PROJECT_VERSION "1.5.0")
